--- a/Eorzea_Collection/Eorzea_Collection.css
+++ b/Eorzea_Collection/Eorzea_Collection.css
@@ -270,7 +270,7 @@ i.fa.fa-sort-asc.sort-icon,
 /* Cover Block */
 
 .list-container .cover-block {
-    background-image: url("https://murakumo-jp.github.io/MyAnimeList-CSS/Eorzea_Collection/images/cover-block-2.png");
+    background-image: url("https://Frodacious.github.io/MyAnimeList-CSS/Eorzea_Collection/images/cover-block-2.png");
     background-repeat: no-repeat;
 	width: 1053px;
     height: 250px;
